<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_bg">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/circle_one" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/circle_two" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:src="@drawable/circle_three" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="200dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/side_dot_bg" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/side_dot" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:id="@+id/signUpButton"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sign_up_button_img" />

                    <ImageButton
                        android:id="@+id/forgotPassBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/forgot_pass_button_img" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:background="@drawable/login_page_white_bg"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:src="@drawable/loginiconbg" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="2dp"
                                android:text="@string/welcome_to"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:text="@string/man_ki_baat"
                                android:textColor="#7976FC"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/dottedBg"
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/dottedbg" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="50dp"
                                android:text="@string/login"
                                android:textColor="#000000"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </RelativeLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/emailInpLayout"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="75dp"
                            android:layout_marginEnd="20dp"
                            android:textColorHint="#8D8C8C"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/edittextbg"
                                android:drawableEnd="@drawable/user_icon"
                                android:hint="@string/email_id_or_user_name"
                                android:importantForAutofill="no"
                                android:padding="8dp"
                                android:textColor="#000000"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passInpLayout"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="75dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:textColorHint="#8D8C8C"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/edittextbg"
                                android:drawableEnd="@drawable/lock_icon"
                                android:hint="@string/password"
                                android:importantForAutofill="no"
                                android:inputType="textPassword"
                                android:padding="8dp"
                                android:textColor="#000000"
                                android:textSize="14sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:id="@+id/savePassLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="80dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/savePassBtn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="#8B36E0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/save_password"
                                android:textColor="#D0000000"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/loginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_marginEnd="50dp"
                            android:background="@drawable/buttonbg"
                            android:text="@string/login"
                            android:textColor="#ffffff" />

                    </LinearLayout>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="30dp"
                        android:src="@drawable/login_img" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="70dp"
            android:layout_weight="0.7">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <ImageButton
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/facebookButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/facebook_icon_white"
                />

            <ImageButton
                android:id="@+id/googleButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/google_icon_white"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>